fixed spacing issue

--- a/views/partials/store.jade
+++ b/views/partials/store.jade
@@ -1,4 +1,4 @@
-.container.store(ng-controller='storeCtrl', style="display:{{showStore()}}; padding-left:30px;")
+.container.store(ng-controller='storeCtrl', style="display:{{showStore()}}; padding-left:30px; width:100%;")
   h1 Store
 
   form.navbar-form.margin-form(role="form")
